--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercici Git i GitHub (Tema 0)</title>
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
     <h1>Exercici Git i GitHub (Tema 0)</h1>
